# EpdAniyaBoxV2

./: CMakeLists.txt  README.md  partitions.csv  partitions_8m.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  LIS3DH.c  LIS3DH.h  battery.c  battery.h  bh1750.c  bh1750.h  box_common.h  common_utils.c  common_utils.h  idf_component.yml  key.c  key.h  main.c  max31328.c  max31328.h  opt3001.c  opt3001.h  page_manager.c  page_manager.h  qmc5883.c  qmc5883.h  rx8025t.c  rx8025t.h  setting.c  setting.h  sgp30.c  sgp30.h  sht31.c  sht31.h  sht40.c  sht40.h  spl06.c  spl06.h  ws2812.c  ws2812.h  ws2812_encoder.c  ws2812_encoder.h
main/beep/: beep.c  beep.h  musical_score_encoder.c  musical_score_encoder.h
main/ble/: ble_device.c  ble_device.h  ble_svc_battery_level.h  ble_svc_device_information.h  my_ble_uuid.h
main/bles/: ble_server.c  ble_server.h  gatt_svr.c
main/file/: my_file_common.c  my_file_common.h
main/lcd/: bmp.c  bmp.h  display.c  display.h  epd_lcd_ssd1680.c  epd_lcd_ssd1680.h  epdpaint.c  epdpaint.h  fonts.h
main/page/: alarm_clock_page.c  alarm_clock_page.h  alert_dialog_page.c  alert_dialog_page.h  battery_page.c  battery_page.h  ble_device_page.c  ble_device_page.h  confirm_menu_page.c  confirm_menu_page.h  data_time_page.c  data_time_page.h  image_manage_page.c  image_page.c  info_page.c  manual_page.c  menu_page.c  music_page.c  music_page.h  pressure_sensor_page.c  pressure_sensor_page.h  setting_list_page.c  temperature_page.c  test_page.c  tomato_clock.c  tomato_clock.h  upgrade_page.c
(+30 files in other folders)
